--- a/ML/USL/LDA_Approach_1.ipynb
+++ b/ML/USL/LDA_Approach_1.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importing all the relevant libraries "
+    "### Importing all the relevant libraries "
    ]
   },
   {
@@ -67,65 +67,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set the current directory where this notebook is present as working Directory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current directory is: /opt/jupyter/Icxa/projectfinder_analytics/ML/USL\n"
+     ]
+    }
+   ],
    "source": [
     "currDir = os.getcwd()\n",
     "if \"USL\" not in currDir:\n",
-    "    os.chdir(os.path.join(currDir,  \"ML\", \"USL\"))"
+    "    os.chdir(os.path.join(currDir,  \"ML\", \"USL\"))\n",
+    "print(\"Current directory is: \" + currDir)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Downloading relevant resources"
+    "### Database details for retrieving dataset and storing the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Using NLTK Downloader to obtain the resource stopwords, punkt\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('punkt')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Database details for retrieving dataset and storing the dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -152,62 +129,35 @@
     "    'port' : 27017,\n",
     "    'database' : 'projectfinder',\n",
     "    'collection' : 'mldata1'\n",
-    "}\n",
-    "\n",
-    "#%%[markdown]\n",
-    "#Methods for loading the dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Creating a path for the directory containing constants and some self made packages"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataDir = os.path.join(currDir,  \"constants\")\n",
-    "import constants.load_save_dataset as load_save_DS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data loaded from mongodb itproject_clean collection succesfully\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scripts.load_save_dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-cdc444a02ba2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_save_dataset\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mload_save_DS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf_rawData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_save_DS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_dataset_from_mongodb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdb_loc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf_rawData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scripts.load_save_dataset'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(14059, 25)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import scripts.load_save_dataset as load_save_DS\n",
     "df_rawData = load_save_DS.load_dataset_from_mongodb(db_loc)\n",
     "df_rawData.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -229,78 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>project</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Für einen unserer Kunden aus dem Finanzdienstl...</td>\n",
-       "      <td>Infr-Admin-Microsoft</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Kann Profil leider nicht löschen.</td>\n",
-       "      <td>IT/Consulting</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Business Intelligence Analyst (m/w) - Tableau ...</td>\n",
-       "      <td>Data-Sci-BI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Konzeption, Customizing sowie Softwareanpassun...</td>\n",
-       "      <td>Infr-Admin-Linux</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Es sollen mehrere Automatisierungen mit ubot S...</td>\n",
-       "      <td>IT/IT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             project                 label\n",
-       "0  Für einen unserer Kunden aus dem Finanzdienstl...  Infr-Admin-Microsoft\n",
-       "1                  Kann Profil leider nicht löschen.         IT/Consulting\n",
-       "2  Business Intelligence Analyst (m/w) - Tableau ...           Data-Sci-BI\n",
-       "3  Konzeption, Customizing sowie Softwareanpassun...      Infr-Admin-Linux\n",
-       "4  Es sollen mehrere Automatisierungen mit ubot S...                 IT/IT"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_preprocessedDataset = get_required_dataset(df_rawData)\n",
     "df_preprocessedDataset.shape\n",
@@ -309,78 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>project</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Für einen unserer Kunden suchen wir mehrere Ja...</td>\n",
-       "      <td>Data-Engr-Big Data</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Anwendungsentwickler - Schwerpunkt: fachlicher...</td>\n",
-       "      <td>Data-Engr-Big Data</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Projektbeschreibung \\n\\n                      ...</td>\n",
-       "      <td>Data-Sci-BI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Projektbeschreibung \\n\\n                      ...</td>\n",
-       "      <td>ERP-SAP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Für unseren Kunden aus Leverkusen sind wir auf...</td>\n",
-       "      <td>Infr-Database-Admin</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             project                label\n",
-       "0  Für einen unserer Kunden suchen wir mehrere Ja...   Data-Engr-Big Data\n",
-       "1  Anwendungsentwickler - Schwerpunkt: fachlicher...   Data-Engr-Big Data\n",
-       "2  Projektbeschreibung \\n\\n                      ...          Data-Sci-BI\n",
-       "3  Projektbeschreibung \\n\\n                      ...              ERP-SAP\n",
-       "4  Für unseren Kunden aus Leverkusen sind wir auf...  Infr-Database-Admin"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# shuffle the data\n",
     "df_preprocessedDataset = df_preprocessedDataset.sample(frac=1.0)\n",
@@ -390,29 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Für einen unserer Kunden suchen wir mehrere Java Software Entwickler (m/w) zur Projektunterstützung. \\r\\n \\r\\nErforderliche Qualifikationen:  \\r\\n•\\tMehrjährige Projekterfahrung als Java Software Engineer \\r\\n•\\tGute Erfahrung in der Backend Entwicklung \\r\\n•\\tSehr gute Kenntnisse in Java 8 \\r\\n•\\tSehr gute Kenntnisse in Spring Batch \\r\\n•\\tGutes methodisches Wissen zu Clean Code, TDD, Design Patterns und Refactoring \\r\\n•\\tKenntnisse im Umgang mit DB2 \\r\\n•\\tErfahrung mit Scrum/Kanban \\r\\n•\\tSehr gute Kenntnisse der deutschen Sprache in Wort und Schrift \\r\\n \\r\\nProjektinformationen:  \\r\\n  Arbeitsaufnahme: Jan / Feb 2019  \\r\\n  Dauer: 12 Monate mit Option auf Verlängerung  \\r\\n  Pensum: 100% vor Ort (kein Remote-Anteil) \\r\\n  Ort: Luzern \\r\\n \\r\\nInteressiert?  \\r\\nWir freuen uns darauf, von Ihnen zu hören!'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_preprocessedDataset.iloc[0,0]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stopwords generation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,12 +228,13 @@
     "dataDir = os.path.join(currDir,  \"constants\")\n",
     "with open(os.path.join(dataDir, 'german_stopwords_full.txt'), 'r') as f:\n",
     "    stopwords_germ = f.read().splitlines()\n",
-    "stopwords_eng = nltk.corpus.stopwords.words('english')"
+    "stopwords_eng = nltk.corpus.stopwords.words('english')\n",
+    "combined_stopWordsPath = os.path.join(dataDir, 'stopwords_manual.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -440,17 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['januar', 'january', 'februar', 'february', 'märz', 'march', 'april', 'mai', 'may', 'juni', 'june', 'juli', 'july', 'august', 'september', 'oktober', 'october', 'november', 'dezember', 'december']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "months = ['Januar', 'January','Februar', 'February', 'März', 'March', 'April', 'Mai', 'May', 'Juni', 'June', 'Juli', \n",
     "          'July', 'August', 'September', 'Oktober', 'October', 'November', 'Dezember', 'December']\n",
@@ -460,40 +261,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "844\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stopwords_manual = [line.rstrip('\\n') for line in open(os.path.join(dataDir, 'stopwords_manual.txt'))]\n",
+    "stopwords_manual = [line.rstrip('\\n') for line in open(combined_stopWordsPath)]\n",
     "print(len(stopwords_manual))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13240"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stopwords_all = list(set(stopwords_germ + stopwords_eng + stopwords_manual + cities + months))\n",
     "len(stopwords_all)"
@@ -501,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -511,7 +293,7 @@
     "stopwords_add = list(set(stopwords_add + stopwords_manual))\n",
     "checker = list(set(stopwords_germ + stopwords_eng + cities + months))\n",
     "stopwords_add.sort()\n",
-    "with open('stopwords_manual.txt', 'w') as f:\n",
+    "with open(combined_stopWordsPath, 'w') as f:\n",
     "    for item in stopwords_add:\n",
     "        if item not in checker:\n",
     "            f.write(\"%s\\n\" % item)"
@@ -519,29 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "844\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "13240"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stopwords_manual = [line.rstrip('\\n') for line in open('stopwords_manual.txt')]\n",
+    "stopwords_manual = [line.rstrip('\\n') for line in open(os.path.join(dataDir, combined_stopWordsPath))]\n",
     "print(len(stopwords_manual))\n",
     "\n",
     "stopwords_all = list(set(stopwords_germ + stopwords_eng + stopwords_manual + cities + months))\n",
@@ -550,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,8 +324,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perform tokenization, stemming on the text"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,6 +398,13 @@
    "outputs": [],
    "source": [
     "df_preprocessedDataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identify most frequently occuring words"
    ]
   },
   {
@@ -727,6 +505,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split data to training and testing "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -759,6 +544,13 @@
    "outputs": [],
    "source": [
     "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the LDA model on training data"
    ]
   },
   {
